--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"engines": {
-		"node": "17.1.0",
-		"npm": "8.1.2"
+		"node": "17.x",
+		"npm": "8.x"
 	},
 	"scripts": {
 		"start": "vue-cli-service serve",
@@ -17,7 +17,6 @@
 		"bootstrap": "^5.1.3",
 		"bootstrap-icons": "^1.8.1",
 		"core-js": "^3.8.3",
-		"http-proxy-middleware": "^2.0.6",
 		"vue": "^3.2.13",
 		"vue-router": "^4.0.3"
 	},
